Projet_k8s/employee-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend-deployment
  namespace: employee-ns
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: employee-backend
  template:
    metadata:
      labels:
        app: employee-backend
    spec:
      containers:
      - name: employee-api
        image: rodriguez003/projet-cloudinfra-employee-backend:2.0  
        ports:
        - containerPort: 8080  
      restartPolicy: Always
