Projet_k8s/mysql-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: mysql-deployment
   namespace: employee-ns
spec:
   replicas: 1
   selector:
      matchLabels:
        app: mysql
   template:
      metadata:
        labels:
          app: mysql
      spec:
        containers:
          - name : mysqldb
            image: mysql:5.7
            ports:
              - containerPort : 3306
            volumeMounts:
              - name: data-mysql-volume
                mountPath: /var/lib/mysql
              - name: secret-config
                readOnly: true
                mountPath: "/etc/secret-volume"
        volumes:
          - name: data-mysql-volume
            hostPath:
              path: /data/mysql
          - name: secret-config
            secret:
              secretName: employee-secrets
