Projet_k8s/registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  namespace: employee-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry-container
          image: registry:2
          ports:
            - containerPort: 5000
