Projet_k8s/registry-ui-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui-deployment
  namespace: employee-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui-container
          image: joxit/docker-registry-ui
          ports:
            - containerPort: 80
          volumeMounts:
          - name: config-volume
            mountPath: /etc/config
      volumes:
      - name: config-volume
        configMap:         
          name: employee-config
