Projet_k8s/sublime_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sublime-text-deployment
  namespace: employee-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sublime-text
  template:
    metadata:
      labels:
        app: sublime-text
    spec:
      containers:
      - name: sublime-text-container
        image: rodriguez003/sublime-text:1.0
        volumeMounts:
        - name: x11-socket
          mountPath: /tmp/.X11-unix
        - name: xauthority
          mountPath: /home/sublimeuser/.Xauthority
        securityContext:
          runAsUser: 1000   
      volumes:
      - name: x11-socket
        hostPath:
          path: /tmp/.X11-unix
      - name: xauthority
        configMap:
          name: xauthority-configmap
