Projet_k8s/employee-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-backend-service
  namespace: employee-ns
spec:
  selector:
    app: employee-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080 
  type: ClusterIP
