Projet_k8s/employee-ihm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-frontend-nodeport-service
  namespace: employee-ns
spec:
  selector:
    app: employee-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
#    nodePort: 30001
#  type: NodePort
