Projet_k8s/mysql-service.yml
kind: Service
apiVersion: v1
metadata:
   name: mysql-service
   namespace: employee-ns
spec:
   selector:
      app: mysql
   type: ClusterIP
   ports:
      - port: 3306
        targetPort: 3306
