Projet_k8s/registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: employee-ns
spec:
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
