Projet_k8s/registry-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui-service
  namespace: employee-ns
spec:
  selector:
    app: registry-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort
