Projet_k8s/ingress-employee.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
  namespace: employee-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mes-employees.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-frontend-nodeport-service
                port:
                  number: 80
    - host: private-dockerhub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui-service
                port:
                  number: 80
